Fix styling for better contrast

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,8 +64,8 @@ li {
     color: #9C1C28 !important;
 }
 
-.text-profile {
-    color: #0a30ac !important;
+.text-decoration-none {
+    color: #0a30ac;
 }
 
 /* Background Images */
